github: Add make check to the windows workflow
Since it's working now.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/.github/workflows/winbuild.yml
+++ b/.github/workflows/winbuild.yml
@@ -42,6 +42,7 @@ jobs:
           ./configure --prefix=$(pwd)/$INSTALLPREFIX/
           make
           make install
+          make check
       - name: Upload installed files
         uses: actions/upload-artifact@v3
         with:
