github: Add pcre to the windows build
So it's available for tests.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/.github/workflows/winbuild.yml
+++ b/.github/workflows/winbuild.yml
@@ -32,6 +32,7 @@ jobs:
             mingw-w64-${{matrix.env}}-gcc
             mingw-w64-${{matrix.env}}-openssl
             mingw-w64-${{matrix.env}}-python
+            mingw-w64-${{matrix.env}}-pcre
             libtool
             autotools
             swig
