Move to version 2.7.0
Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([gensio],[2.7.0-rc1],[minyard@acm.org])
+AC_INIT([gensio],[2.7.0],[minyard@acm.org])
 AC_SUBST(gensio_VERSION_MAJOR, 2)
 AC_SUBST(gensio_VERSION_MINOR, 7)
 AC_SUBST(gensio_VERSION_PATCH, 0)
