lib: Remove the unnecessary .la and .a files that get installed
Modules are dynamically loaded by the main library, and you don't link
against them.  No need for .la and .a files.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -366,3 +366,10 @@ DISTCLEANFILES = builtin_gensios.h
 # by 'install-exec' target (instead of default 'install-data')
 pkgconfigexecdir = $(libdir)/pkgconfig
 pkgconfigexec_DATA = libgensioosh.pc libgensio.pc libgensiomdns.pc
+
+xgensio_libs = $(xgensio_libexec_LTLIBRARIES:.la=.a)
+
+# Remove the .a and .la files for the modules that get installed.
+install-exec-hook:
+	@(cd $(DESTDIR)$(gensiolibexec) && $(RM) -f $(xgensio_libexec_LTLIBRARIES))
+	@(cd $(DESTDIR)$(gensiolibexec) && $(RM) -f $(xgensio_libs))
