lib: Add libgensioosh to DYNAMIC_LIBS
Some platforms don't seem to pick it up from libgensio's dependencies.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -59,7 +59,7 @@ xgensio_libexecdir = $(gensiolibexec)
 EXTRA_LTLIBRARIES =
 xgensio_libexec_LTLIBRARIES =
 DYNAMIC_LDFLAGS = -no-undefined -module -rpath "$(gensiolibexec)" -avoid-version
-DYNAMIC_LIBS = libgensio.la
+DYNAMIC_LIBS = libgensio.la libgensioosh.la
 
 if BUILTIN_NET
 libgensio_la_SOURCES += gensio_net.c
