--- a/glib/c++/swig/pygensio/Makefile.am
+++ b/glib/c++/swig/pygensio/Makefile.am
@@ -24,9 +24,9 @@ EXTRA_DIST = pygensioglib.i
 nodist__pygensioglib_la_SOURCES = pygensioglib_wrap.cc
 _pygensioglib_la_LIBADD = $(top_builddir)/c++/lib/libgensiocpp.la \
 		$(top_builddir)/lib/libgensio.la $(top_builddir)/glib/libgensioglib.la \
-		$(OPENSSL_LIBS) $(PYTHON_LIBS)
+		$(OPENSSL_LIBS) $(PYTHON_UNDEF_LIBS)
 _pygensioglib_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
-		-no-undefined $(PYTHON_EXT_EXT_SET)
+		$(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
 
 clean-local:
 	rm -rf __pycache__ pygensioglib_wrap.cc pygensioglib_wrap.h \
