--- a/tcl/c++/swig/pygensio/Makefile.am
+++ b/tcl/c++/swig/pygensio/Makefile.am
@@ -24,9 +24,9 @@ EXTRA_DIST = pygensiotcl.i
 nodist__pygensiotcl_la_SOURCES = pygensiotcl_wrap.cc
 _pygensiotcl_la_LIBADD = $(top_builddir)/c++/lib/libgensiocpp.la \
 		$(top_builddir)/lib/libgensio.la $(top_builddir)/tcl/libgensiotcl.la \
-		$(OPENSSL_LIBS) $(PYTHON_LIBS) $(TCL_LIBS)
+		$(OPENSSL_LIBS) $(PYTHON_UNDEF_LIBS) $(TCL_LIBS)
 _pygensiotcl_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
-		-no-undefined $(PYTHON_EXT_EXT_SET)
+		$(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
 
 clean-local:
 	rm -rf __pycache__ pygensiotcl_wrap.cc pygensiotcl_wrap.h \
