--- a/tcl/c++/swig/pygensio/Makefile.am
+++ b/tcl/c++/swig/pygensio/Makefile.am
@@ -26,7 +26,7 @@ _pygensiotcl_la_LIBADD = $(top_builddir)/c++/lib/libgensiocpp.la \
 		$(top_builddir)/lib/libgensio.la $(top_builddir)/tcl/libgensiotcl.la \
 		$(OPENSSL_LIBS) $(PYTHON_LIBS) $(TCL_LIBS)
 _pygensiotcl_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
-		-no-undefined $(PYTHON_EXT_EXT_SET)
+		$(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
 
 clean-local:
 	rm -rf __pycache__ pygensiotcl_wrap.cc pygensiotcl_wrap.h \
