--- a/configure.ac
+++ b/configure.ac
@@ -119,7 +119,6 @@ AC_SUBST(USE_OPENPTY)
 
 AC_SUBST(PYTHON_EXT_EXT)
 AC_SUBST(PYTHON_EXT_EXT_SET)
-AC_SUBST(PYTHON_UNDEF_FLAG)
 
 AC_ARG_WITH(link-ssl-with-main,
 	    [AS_HELP_STRING([--with-link-ssl-with-main=[yes|no]],
@@ -1922,12 +1921,18 @@ _ACEOF
    fi
 fi
 
+PYTHON_UNDEF_LIBS=
+if test $PYTHON_UNDEF_FLAG = "-no-undefined"; then
+   PYTHON_UNDEF_LIBS="$PYTHON_LIBS"
+fi
 AC_SUBST(PYTHON_DIR)
 AC_SUBST(PYGENSIO_DIR)
 AC_SUBST(PYTHON_INSTALL_DIR)
 AC_SUBST(PYTHON_INSTALL_LIB_DIR)
 AC_SUBST(PYTHON_HAS_THREADS)
 AC_SUBST(PYTHON_SWIG_FLAGS)
+AC_SUBST(PYTHON_UNDEF_FLAG)
+AC_SUBST(PYTHON_UNDEF_LIBS)
 
 PYTHON_EXECUTABLE="${PYTHON}"
 AC_SUBST(PYTHON_EXECUTABLE)
