--- a/tcl/swig/python/Makefile.am
+++ b/tcl/swig/python/Makefile.am
@@ -19,7 +19,8 @@ nodist__gensiotcl_la_SOURCES = gensiotcl_wrap.c
 _gensiotcl_la_LIBADD = $(top_builddir)/tcl/libgensiotcl.la \
 		$(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS) \
 		$(TCL_LIBS) \
-		$(top_builddir)/swig/python/libgensio_python_swig.la
+		$(top_builddir)/swig/python/libgensio_python_swig.la \
+		$(PYTHON_UNDEF_LIBS)
 _gensiotcl_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
 		$(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
 
