--- a/glib/swig/python/Makefile.am
+++ b/glib/swig/python/Makefile.am
@@ -17,7 +17,9 @@ gensioglib_wrap.c gensioglib.py: $(top_srcdir)/glib/swig/gensioglib.i
 
 nodist__gensioglib_la_SOURCES = gensioglib_wrap.c
 _gensioglib_la_LIBADD = $(top_builddir)/glib/libgensioglib.la \
-		$(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS) \
+		$(top_builddir)/lib/libgensio.la \
+		$(top_builddir)/lib/libgensioosh.la \
+		$(OPENSSL_LIBS) \
 		$(top_builddir)/swig/python/libgensio_python_swig.la \
 		$(PYTHON_UNDEF_LIBS)
 _gensioglib_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
