--- a/tcl/Makefile.am
+++ b/tcl/Makefile.am
@@ -6,7 +6,9 @@ lib_LTLIBRARIES = libgensiotcl.la
 
 libgensiotcl_la_SOURCES = gensio_tcl.c
 libgensiotcl_la_CFLAGS = $(TCL_CFLAGS) $(AM_CFLAGS)
-libgensiotcl_la_LIBADD = $(top_builddir)/lib/libgensio.la @TCL_LIBS@
+libgensiotcl_la_LIBADD = $(top_builddir)/lib/libgensio.la \
+	$(top_builddir)/lib/libgensioosh.la \
+	@TCL_LIBS@
 libgensiotcl_la_LDFLAGS = -no-undefined -rpath $(libdir) \
 	-version-info $(GENSIO_LIB_VERSION) -fvisibility=hidden
 
