github: Add portaudio to the install for MacOS
Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/.github/workflows/macosbuild.yml
+++ b/.github/workflows/macosbuild.yml
@@ -23,6 +23,7 @@ jobs:
           brew install automake
           brew install swig
           brew install openssl
+          brew install portaudio
       - name: Configure
         run: |
           mkdir $INSTALLPREFIX
