tests: Add dependencies from tests to certificates and keys
To work in parallel, the tests that require keys need to depend on those
keys.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -26,6 +26,19 @@ PYTESTS = test_syncio.py \
 	test_ax25_small.py test_ax25_basics.py test_script.py test_ratelimit.py\
 	test_parmlog.py
 
+test_accept_ssl_tcp.py: ca/CA.key
+
+test_accept_certauth_tcp.py: ca/CA.key
+
+test_ssl_tcp_accept_connect.py: ca/CA.key
+
+test_certauth_tcp_accept_connect.py: ca/CA.key
+
+test_certauth_ssl_tcp_accept_connect.py: ca/CA.key
+
+ca/CA.key:
+	$(srcdir)/make_keys
+
 OOMTESTS = oomtest0 oomtest1 oomtest2 oomtest3 oomtest4 oomtest5 oomtest6 \
 	oomtest7 oomtest8 oomtest9 oomtest10 oomtest11 oomtest12 oomtest13 \
 	oomtest14 oomtest15
