c++/swig/(go|pygensio): Rework certificate generation
Same fixes as in the main tests, add a direct dependency from the crypto
tests to the keys and key generation in the makefile.  Remove key
generation from the runtest.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/c++/swig/go/tests/Makefile.am
+++ b/c++/swig/go/tests/Makefile.am
@@ -5,6 +5,11 @@ LOG_COMPILER = $(SHELL) $(builddir)/runtest
 
 TESTS = test_basic test_ax25 test_crypto test_serial test_mdns test_netifs
 
+test_crypto: ca/CA.key
+
+ca/CA.key:
+	$(top_srcdir)/tests/make_keys
+
 TEST_SRCS = test_basic.go test_ax25.go test_crypto.go test_serial.go \
 	test_mdns.go test_netifs.go
 
