tests: Add VERBOSE = 1
So we can see the test output on a failure.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/c++/swig/pygensio/tests/Makefile.am
+++ b/c++/swig/pygensio/tests/Makefile.am
@@ -1,4 +1,6 @@
 
+export VERBOSE = 1
+
 LOG_COMPILER = $(SHELL) $(builddir)/runtest
 
 TESTS = test_basic.py test_ax25.py test_crypto.py test_mdns.py \
